crates/rome_js_formatter/tests/specs/prettier/js/export-extension/export.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\export-extension\\export.js"
---

# Input

```js
export * as ns from 'mod';
export v from 'mod';
export a, * as b from 'mod';
export c, { foo } from 'mod';
export * as d, { bar } from 'mod';
export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
export { foooooooooooooooooooooooooooooooooooooooooooooo, fooooooooooooooooooooooooooooooooooooooooooooooo  } from "fooooooooooooooooooooooooooooo";
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,12 +1,31 @@
 export * as ns from "mod";
-export v from "mod";
-export a, * as b from "mod";
-export c, { foo } from "mod";
-export * as d, { bar } from "mod";
-export { fooooooooooooooooooooooooooooooooooooooooooooooooo } from "fooooooooooooooooooooooooooooo";
-export Bar, {
-  barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr,
-} from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
+export
+v;
+from;
+("mod");
+export
+a, * as
+b;
+from;
+("mod");
+export
+c, { foo };
+from;
+("mod");
+export * as d
+,
+{
+  bar;
+}
+from;
+("mod");
+export {
+  fooooooooooooooooooooooooooooooooooooooooooooooooo,
+} from "fooooooooooooooooooooooooooooo";
+export
+Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr };
+from;
+("barrrrrrrrrrrrrrrrrrrrrrrrrrrr");
 export {
   foooooooooooooooooooooooooooooooooooooooooooooo,
   fooooooooooooooooooooooooooooooooooooooooooooooo,
```

# Output

```js
export * as ns from "mod";
export
v;
from;
("mod");
export
a, * as
b;
from;
("mod");
export
c, { foo };
from;
("mod");
export * as d
,
{
  bar;
}
from;
("mod");
export {
  fooooooooooooooooooooooooooooooooooooooooooooooooo,
} from "fooooooooooooooooooooooooooooo";
export
Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr };
from;
("barrrrrrrrrrrrrrrrrrrrrrrrrrrr");
export {
  foooooooooooooooooooooooooooooooooooooooooooooo,
  fooooooooooooooooooooooooooooooooooooooooooooooo,
} from "fooooooooooooooooooooooooooooo";
```


# Errors
```
export.js:2:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `*` but instead found `v`
  
  × unexpected
  
    ┌─ export.js:2:8
    │
  2 │ export v from 'mod';
    │        ^
  
export.js:2:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:2:10
    │
  2 │ export v from 'mod';
    │          ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:2:8
    │
  2 │ export v from 'mod';
    │        ^^^^^^
  
export.js:2:15 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:2:15
    │
  2 │ export v from 'mod';
    │               ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:2:10
    │
  2 │ export v from 'mod';
    │          ^^^^^^^^^^
  
export.js:3:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a class, a function, or a variable declaration but instead found 'a'
  
  × Expected a class, a function, or a variable declaration here
  
    ┌─ export.js:3:8
    │
  3 │ export a, * as b from 'mod';
    │        ^
  
export.js:3:11 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an expression for the left hand side of the `*` operator.
  
  × This operator requires a left hand side value
  
    ┌─ export.js:3:11
    │
  3 │ export a, * as b from 'mod';
    │           ^
  
export.js:3:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:3:16
    │
  3 │ export a, * as b from 'mod';
    │                ^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:3:8
    │
  3 │ export a, * as b from 'mod';
    │        ^^^^^^^^^
  
export.js:3:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:3:18
    │
  3 │ export a, * as b from 'mod';
    │                  ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:3:16
    │
  3 │ export a, * as b from 'mod';
    │                ^^^^^^
  
export.js:3:23 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:3:23
    │
  3 │ export a, * as b from 'mod';
    │                       ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:3:18
    │
  3 │ export a, * as b from 'mod';
    │                  ^^^^^^^^^^
  
export.js:4:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a class, a function, or a variable declaration but instead found 'c'
  
  × Expected a class, a function, or a variable declaration here
  
    ┌─ export.js:4:8
    │
  4 │ export c, { foo } from 'mod';
    │        ^
  
export.js:4:19 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:4:19
    │
  4 │ export c, { foo } from 'mod';
    │                   ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:4:8
    │
  4 │ export c, { foo } from 'mod';
    │        ^^^^^^^^^^^^^^^
  
export.js:4:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:4:24
    │
  4 │ export c, { foo } from 'mod';
    │                        ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:4:19
    │
  4 │ export c, { foo } from 'mod';
    │                   ^^^^^^^^^^
  
export.js:5:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `from` but instead found `,`
  
  × unexpected
  
    ┌─ export.js:5:14
    │
  5 │ export * as d, { bar } from 'mod';
    │              ^
  
export.js:5:29 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:5:29
    │
  5 │ export * as d, { bar } from 'mod';
    │                             ^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:5:24
    │
  5 │ export * as d, { bar } from 'mod';
    │                        ^^^^^^^^^^
  
export.js:7:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a class, a function, or a variable declaration but instead found 'Bar'
  
  × Expected a class, a function, or a variable declaration here
  
    ┌─ export.js:7:8
    │
  7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
    │        ^^^
  
export.js:7:63 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:7:63
    │
  7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
    │                                                               ^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:7:8
    │
  7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
    │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
export.js:7:68 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ export.js:7:68
    │
  7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
    │                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i ...Which is required to end this statement
  
    ┌─ export.js:7:63
    │
  7 │ export Bar, { barrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr } from "barrrrrrrrrrrrrrrrrrrrrrrrrrrr";
    │                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  

```


